[package]
name = "logma"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Logma? What's Logma? LOGMA FILE"
homepage = "https://github.com/whamer100/rs_logma"
repository = "https://github.com/whamer100/rs_logma"
readme = "README.md"
keywords = ["logging", "colors", "logma"]
categories = ["command-line-interface"]
authors = ["whamer100 <whamer100@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
