[package]
name = "logma"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "Logma? What's Logma? LOGMA TEXT"
homepage = "https://github.com/whamer100/rs_logma"
repository = "https://github.com/whamer100/rs_logma"
readme = "README.md"
keywords = ["logging", "colors", "logma"]
categories = ["command-line-interface"]
authors = ["whamer100 <whamer100@gmail.com>"]
publish = true

[lib]
name = "logma"
path = "src/lib.rs"

[dependencies]
colored = "2.1.0"
